--- a/index.html
+++ b/index.html
@@ -1,18 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css" rel="stylesheet">
-    <title>My Tailwind CSS Project</title>
-</head>
-<body>
-    <div class="bg-blue-500 text-white text-center py-4">
-        <h1 class="text-4xl font-bold">Welcome to Tailwind CSS</h1>
-        <p class="mt-4">A utility-first CSS framework.</p>
-    </div>
-    <div class="container mx-auto mt-8 p-4">
-        <p class="text-lg">Get started with Tailwind CSS and create amazing web interfaces.</p>
-    </div>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
